# fluid-sim

./: .gitignore  CMakeLists.txt  main.cu  main1.cu  main2.cu
fluid/: Fluid.cu  Fluid.cuh  Fluid.h  Particle.h  getFieldIndex.cu  updateFluid.cu
resources/shaders/: fieldShader.vert  metaballShader.frag  metaballShader.vert
utils/: RenderSurface.cpp  RenderSurface.h  Shader.cpp  Shader.h
